# ComfyUI-QuasimondoNodes

./: LICENSE  README.md  __init__.py  colorTransfer.py  cppn_nodes.py  extra_nodes.py  gl_nodes.py  image_nodes.py  pyproject.toml  queue_nodes.py  random_image_generator.py  requirements.txt
.github/workflows/: publish_action.yml
cppn/: models.py
examples/: CustomShader_animation.json  CustomShader_basic.json
