# pyproject.toml
[project]
name = "comfyui-quasimondonodes"
description = "This repository contains custom nodes for ComfyUI created and used by Mario Klingemann (@Quasimondo on Twitter and Instagram)"
version = "1.0.3"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/Quasimondo/ComfyUI-QuasimondoNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "quasimondo"
DisplayName = "ComfyUI-QuasimondoNodes"
Icon = "https://quasimondo.com/wordpress/wp-content/uploads/2016/02/cropped-quasimondo_logo-150x150.png"
